<resources>
    <string name="app_name">V2EX</string>

    <string name="newest">最新</string>
    <string name="hot">热议</string>
    <string name="all">所有</string>
    <string name="discover">发现</string>
    <string name="my">我的</string>

    <string name="newest_post">最新话题</string>
    <string name="hot_post">热议话题</string>
    <string name="all_nodes">所有节点</string>

    <string name="just_now">刚刚</string>
    <string name="topic_detail_text">话题详情</string>

    <string name="self">楼主</string>

    <string name="user_id_format">第%d个会员</string>
    <string name="register_date">注册日期: %s</string>

    <string name="search">搜索...</string>
    <string name="exit_app_prompt">再按一次退出Simple V2ex</string>

    <string name="network_error">网络错误请检查设置，并开启WIFI或移动数据</string>
    <string name="network_error_label">error</string>

    <string name="create_topic">创建话题</string>
    <string name="action_post">发布</string>
    <string name="node_name">节点名</string>
    <string name="topic_title">标题</string>
    <string name="topic_content">内容</string>
    <string name="select_node">选择节点</string>

    <string name="sign_desc">尚未登录,请登录</string>
    <string name="sign_in_title">登录</string>
    <string name="signing">登录中...</string>
    <string name="post_topic_label">发布话题</string>
    <string name="favorite_topic_label">收藏话题</string>
    <string name="favorite_node_label">收藏节点</string>
    <string name="signout_label">退出登录</string>
    <string name="setting_label">应用设置</string>
    <string name="setting_title_label">偏好设置</string>

    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="captcha">请输入上图中的验证码</string>


    <string name="favorite">收藏</string>
    <string name="favorited">已收藏</string>
    <string name="favoriting">收藏中...</string>
    <string name="unfavorite">取消收藏</string>


    <!-- 设置 -->
    <string name="setting_main">常规设置</string>
    <string name="setting_show_img_only_wifi">富文本无图模式</string>
    <string name="setting_show_img_only_wifi_summary">移动网络下不加载图片</string>
    <string name="setting_use_https">使用HTTPS</string>
    <string name="setting_use_https_summary">安全的请求连接，较HTTP响应速度稍慢</string>
    <string name="settings_clear_img_cache">清除图片缓存</string>
    <string name="settings_clear_file_cache">清除文件缓存</string>
    <string name="settings_more">其他</string>
    <string name="settings_about">关于应用</string>
    <string name="settings_about_summary">关于应用、作者信息</string>

</resources>
