<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include android:id="@+id/topBarTitle" layout="@layout/common_top_bar_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#f2f2f2">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="26sp"
            android:textStyle="italic"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

    
    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@drawable/edit_text_bg_selector"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="8dp"
        android:textSize="16sp"
        android:hint="@string/user_name"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:padding="10dp"
        android:background="@drawable/edit_text_bg_selector"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="8dp"
        android:textSize="16sp"
        android:hint="@string/password"/>

    <ImageView
        android:id="@+id/captcha_iv"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        />

    <EditText
        android:id="@+id/captcha_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:padding="10dp"
        android:background="@drawable/edit_text_bg_selector"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:textSize="16sp"
        android:hint="@string/captcha"/>


    <TextView
        android:id="@+id/sign_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:gravity="center"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="gone"/>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_corner_bg_selector"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/sign_in_title"
        android:textColor="#fff"
        android:textSize="18sp" />
    </LinearLayout>


</LinearLayout>