<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="64dp">

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_avatar"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"/>

        <TextView
            android:id="@+id/sign_in"
            android:layout_toRightOf="@id/avatar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_desc"
            android:textColor="@color/black"
            android:layout_centerVertical="true"
            android:textSize="16sp"
            android:padding="8dp"/>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="8dp"
            android:src="@drawable/icon_arrow_left"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:background="#EAEAEA"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp">
        <TextView
            android:id="@+id/post_topic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/post_topic_label"
            android:textColor="@color/black"
            android:layout_centerVertical="true"
            android:textSize="16sp"
            android:layout_marginLeft="8dp"
            android:padding="8dp"/>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="8dp"
            android:src="@drawable/icon_arrow_left"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="16dp"
        android:background="#EAEAEA"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp">
        <TextView
            android:id="@+id/favorite_topic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/favorite_topic_label"
            android:textColor="@color/black"
            android:layout_centerVertical="true"
            android:textSize="16sp"
            android:layout_marginLeft="8dp"
            android:padding="8dp"/>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="8dp"
            android:src="@drawable/icon_arrow_left"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="16dp"
        android:background="#EAEAEA"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp">
        <TextView
            android:id="@+id/favorite_node"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/favorite_node_label"
            android:textColor="@color/black"
            android:layout_centerVertical="true"
            android:textSize="16sp"
            android:layout_marginLeft="8dp"
            android:padding="8dp"/>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="8dp"
            android:src="@drawable/icon_arrow_left"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="16dp"
        android:background="#EAEAEA"/>

    <!--退出登录 默认是隐藏的 登陆后显示 -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp">
        <TextView
            android:id="@+id/signout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signout_label"
            android:textColor="@color/black"
            android:layout_centerVertical="true"
            android:textSize="16sp"
            android:layout_marginLeft="8dp"
            android:padding="8dp"/>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="8dp"
            android:src="@drawable/icon_arrow_left"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:background="#EAEAEA"/>

    <RelativeLayout
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="48dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting_label"
            android:textColor="@color/black"
            android:layout_centerVertical="true"
            android:textSize="16sp"
            android:layout_marginLeft="8dp"
            android:padding="8dp"/>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="8dp"
            android:src="@drawable/icon_arrow_left"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#EAEAEA"/>
</LinearLayout>